# murasaki-core

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  security.yml
crates/murasaki-core/: Cargo.toml
crates/murasaki-core/src/: error.rs  file_ops.rs  lib.rs  recovery.rs  storage.rs  vault.rs
crates/murasaki-core/tests/: integration.rs
crates/murasaki-crypto/: Cargo.toml
crates/murasaki-crypto/src/: error.rs  hash.rs  hkdf_derive.rs  kdf.rs  key_hierarchy.rs  lib.rs  recovery.rs  service.rs  symmetric.rs
crates/murasaki-format/: Cargo.toml
crates/murasaki-format/src/: chunk.rs  codec.rs  error.rs  lib.rs  splitter.rs  types.rs
crates/murasaki-wasm/: Cargo.toml
crates/murasaki-wasm/src/: lib.rs
crates/murasaki-wasm/tests/: wasm.rs
docs/: ARCHITECTURE.md  SECURITY.md
