[package]
name = "murasaki-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
murasaki-crypto = { path = "../murasaki-crypto" }
murasaki-format = { path = "../murasaki-format" }
thiserror.workspace = true
zeroize.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
sha2.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
