[package]
name = "murasaki-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true
serde.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
hkdf.workspace = true
sha2.workspace = true
tiny-bip39.workspace = true

[dev-dependencies]
